maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:28: error: ':' expected but ')' found.
def isDirectionFree(dir):Boulean = {
                       ^Escaper:42: error: identifier expected but '}' found.
}
^